--- a/cronjob.yaml
+++ b/cronjob.yaml
@@ -19,6 +19,6 @@ spec:
         spec:
           containers:
           - name: pi
-            image: image-registry.openshift-image-registry.svc:5000/sumit/pet
+            image: praveenlti/javaapp1:latest
             #command: ["perl",  "-Mbignum=bpi", "-wle", "print bpi(2000)"]
           restartPolicy: OnFailure 
